--- a/certain-news/index.html
+++ b/certain-news/index.html
@@ -1,9 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/certain-news-logo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script
+      async
+      src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-3138057547675144"
+      crossorigin="anonymous"
+    ></script>
     <title>Certain News | Verified News From The World</title>
   </head>
   <body>
